
=== ppracer 0.5 beta ===

2006-02-01  Volker Stroebel <volker@planetpenguin.de>
	* src/game_type_select.* src/event_select.*
	src/event_race_select.* src/race_select.*
	src/configmode.* src/configuration.*
	fixed keyboard navigation
	
	*src/partsys.* src/quadtree.cpp
	compilation fixes

2006-01-31  Volker Stroebel <volker@planetpenguin.de>
	* src/ppogl/font/*
	replaced FTVector with std::vector

2006-01-29  Volker Stroebel <volker@planetpenguin.de>
	* src/render_utils.cpp
	fix draw billboard
	
	* src/part_sys.*
	added class PartSys
	changed code to use new class

2006-01-25  Volker Stroebel <volker@planetpenguin.de>
	* src/*
	cleanups

2006-01-14  Volker Stroebel <volker@planetpenguin.de>
	* src/sqstdlib/Makefile.am src/ppogl/Makefile.am
	changes to allow building the project from other directories

	* configure.in data/config.nut.in
	fixed creation of config.nut
	
	* (*)
	updated copyright

2006-01-10  Volker Stroebel <volker@planetpenguin.de>
	* src/squirrel/squirrel.h
	added check for config.h
	use inttypes.h if available

2006-01-09  Volker Stroebel <volker@planetpenguin.de>
	* src/main.cpp src/stuff.cpp
	added --keep-config command line option

2006-01-04  Volker Stroebel <volker@planetpenguin.de>
	* configure.in
	added extra checks for X libraries (Simon80)

2006-01-02  Volker Stroebel <volker@planetpenguin.de>
	* src/game_over.*
	fixed mouseButtonEvent()
	
	* src/paused.cpp
	resume if escape is pressed

2006-01-01  Volker Stroebel <volker@planetpenguin.de>
	* src/viewfrustum.*
	added class ViewFrustum and global instance

2005-12-29  Volker Stroebel <volker@planetpenguin.de>
	* src/ftgl/ src/ppogl/font/*
	moved ftgl code to ppogl
	merged class FTTextureFont with class FTFont
	merged class FTTextureGlyph with class FTGlyph
	replaced FTPoint with ppogl::Vec2d
	use ppogl::Singleton for FTLibrary
	use ppogl::RefObject for FTFont
	removed unused code and files
	code cleanups and minor changes

2005-12-22  Volker Stroebel <volker@planetpenguin.de>